h264parse: Use slice type to determine if frame is keyframe

This is the same behaviour as pre-baseparse-refactoring

https://bugzilla.gnome.org/show_bug.cgi?id=705598